<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.adoption.ThankYouActivity">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvThankYouMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_message"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/tvFollowUpMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_up_message"
            android:textSize="18sp"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/tvThankYouMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReturnToMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_main_button"
            app:layout_constraintTop_toBottomOf="@id/tvFollowUpMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="12dp"
            android:layout_marginTop="30dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
